Partial completed Banking Microservice

--- a/MicroRabbit/MicroRabbit.Banking.Api/appsettings.json
+++ b/MicroRabbit/MicroRabbit.Banking.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "BankingDbConnection": "Data Source=C:\\Users\\BR00125011\\source\\repos\\MicroServicesRabbitMQ\\MicroRabbit\\MicroRabbit.Banking.Api\\DB\\BankingDB.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
