--- a/MicroRabbit/MicroRabbit.Banking.Domain/MicroRabbit.Banking.Domain.csproj
+++ b/MicroRabbit/MicroRabbit.Banking.Domain/MicroRabbit.Banking.Domain.csproj
@@ -4,4 +4,11 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Commands\" />
+    <Folder Include="CommandHandles\" />
+    <Folder Include="Events\" />
+    <Folder Include="EventHandles\" />
+  </ItemGroup>
+
 </Project>
