Refactor RabbitMQ Bus for Dependecy Injection for parameter contructors in our EvenHandler

--- a/MicroRabbit/MicroRabbit.Transfer.Api/appsettings.json
+++ b/MicroRabbit/MicroRabbit.Transfer.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "TransferDbConnection": "Data Source=C:\\Users\\BR00125011\\source\\repos\\MicroServicesRabbitMQ\\MicroRabbit\\MicroRabbit.Transfer.Api\\DB\\TransferDb.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
